// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Links should convert IRC address text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "An IRC address: ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "irc://atlassian.com/confluence",
              },
              "type": "link",
            },
          ],
          "text": "irc://atlassian.com/confluence",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should convert links with port to link marks 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Link with port ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "http://localhost:8080",
              },
              "type": "link",
            },
          ],
          "text": "http://localhost:8080",
          "type": "text",
        },
        Object {
          "text": " here",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should convert links with text to link marks 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is an ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "Atlassian",
          "type": "text",
        },
        Object {
          "text": " link",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should convert mailto: links to link marks + remove mailto: prefix 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "mailto:legendaryservice@atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "legendaryservice@atlassian.com",
          "type": "text",
        },
        Object {
          "text": " link",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should convert normal url text to link marks 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Hey, checkout atlassian=",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "http://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "http://www.atlassian.com",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should convert simple links to link marks 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "https://www.atlassian.com",
          "type": "text",
        },
        Object {
          "text": " link",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should convert url text inside <> to link marks 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Hey, this is amazing <",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "https://www.atlassian.com",
          "type": "text",
        },
        Object {
          "text": ">",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should create Media Image and Link from linkable-image 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a linkable image ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "layout": "center",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__displayType": null,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__key": null,
            "collection": "",
            "height": 183,
            "id": "image.jpg",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "!image.jpg!",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should ignore anchor-links starting with # 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is an [#anchor] link",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should ignore anchors 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Anchor ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "extensionKey": "anchor",
        "extensionType": "com.atlassian.jira.macro",
        "layout": "default",
        "parameters": Object {
          "rawAttrs": "anchorname",
        },
        "text": "",
      },
      "type": "extension",
    },
    Object {
      "content": Array [
        Object {
          "text": " here",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should ignore file links 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a local file [file:///c:/temp/foo.txt] link",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Links should ignore invalid protocal 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "An invalid URL: invalid://nowhere.com/hello",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
